--- a/src/styles/_breakpoints.scss
+++ b/src/styles/_breakpoints.scss
@@ -1,3 +1,3 @@
-$screen-sm-max: 320px;
-$screen-md-max: 744px;
-$screen-lg-max: 1440px;
+$screen-sm-min: 321px;
+$screen-md-min: 745px;
+$screen-lg-min: 1441px;
