--- a/src/styles/_responsive-mixins.scss
+++ b/src/styles/_responsive-mixins.scss
@@ -1,15 +1,15 @@
 @use '_breakpoints.scss';
 
 // Small devices
-@mixin sm {
-  @media (max-width: #{$screen-sm-max}) {
+@mixin md {
+  @media (max-width: #{breakpoints.$screen-sm-min}) {
     @content;
   }
 }
 
 // Medium devices
-@mixin md {
-  @media (max-width: #{$screen-md-max}) {
+@mixin lg {
+  @media (max-width: #{breakpoints.$screen-md-min}) {
     @content;
   }
 }
