- add lists to reset

--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -24,6 +24,10 @@ p, h1, h2, h3, h4, h5, h6 {
   overflow-wrap: break-word;
 }
 
+ol, ul {
+  list-style: none;
+}
+
 #root {
   isolation: isolate;
 }
