- fix after rebase to develop

--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -29,7 +29,7 @@
 
         &:hover,
         &:focus {
-            --color: var(--button-text);
+            --color: var(--night);
             --background-color: var(--white);
             cursor: pointer;
         }
