--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -1,16 +1,19 @@
+@use "../../styles/responsive-mixins";
+
 .button {
-    --_horizontal-padding: var(--horizontal-padding, 14px);
-    --_vertical-padding: var(--vertical-padding, 14px);
-    --_font-size: var(--font-size, 1rem);
+    --_horizontal-padding: var(--horizontal-padding, 10px);
+    --_vertical-padding: var(--vertical-padding, 10px);
+    --_font-size: var(--font-size, 0.875rem);
     --_font-weight: var(--font-weight, 500);
     --_background-color: var(--background-color, transparent);
     --_border-color: var(--border-color, var(--_background-color));
     --_color: var(--color, var(--white));
+    --_line-height: var(--line-height, 21px);
 
     font-family: Lato, sans-serif;
     font-weight: var(--_font-weight);
     font-size: var(--_font-size);
-    line-height: 24px;
+    line-height: var(--_line-height);
     border-radius: 8px;
     border: 2px solid var(--_border-color);
     padding: var(--_vertical-padding) var(--_horizontal-padding);
@@ -24,8 +27,10 @@
         outline: 2px solid -webkit-focus-ring-color;
     }
 
-    &.primary {
+    &.form {
         --border-color: var(--white);
+        --horizontal-padding: 14px;
+        --vertical-padding: 10px;
 
         &:hover,
         &:focus {
@@ -35,7 +40,7 @@
         }
     }
 
-    &.secondary {
+    &.main {
         --background-color: var(--primary);
 
         &:hover,
@@ -45,7 +50,7 @@
         }
     }
 
-    &.pale {
+    &.inverted {
         --color: var(--primary);
         --background-color: var(--white);
 
@@ -58,11 +63,10 @@
     }
 
     &.nav {
-        --font-size: 20px;
-        --font-weight: 600;
+        --font-weight: 500;
         --background-color: var(--primary);
-        --horizontal-padding: 22px;
-        --vertical-padding: 16px;
+        --horizontal-padding: 14px;
+        --vertical-padding: 10px;
 
         &:hover,
         &:focus {
@@ -85,5 +89,31 @@
 
     @media (prefers-reduced-motion: reduce) {
         transition: none;
+    }
+
+    @include responsive-mixins.md {
+        &.form {
+            --horizontal-padding: 22px;
+            --vertical-padding: 14px;
+        }
+    }
+
+    @include responsive-mixins.lg {
+        --_horizontal-padding: var(--horizontal-padding, 14px);
+        --_vertical-padding: var(--vertical-padding, 14px);
+        --_font-size: var(--font-size, 1rem);
+        --_font-weight: var(--font-weight, 500);
+        --_background-color: var(--background-color, transparent);
+        --_border-color: var(--border-color, var(--_background-color));
+        --_color: var(--color, var(--white));
+        --_line-height: var(--line-height, 24px);
+
+        &.nav {
+            --font-size: 20px;
+            --font-weight: 600;
+            --horizontal-padding: 22px;
+            --vertical-padding: 16px;
+            --line-height: 24px;
+        }
     }
 }
