--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -1,4 +1,4 @@
-@use "../../styles/responsive-mixins";
+@use "@/styles/responsive-mixins";
 
 .button {
     --_horizontal-padding: var(--horizontal-padding, 10px);
