--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -13,6 +13,7 @@ html, body {
 body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
+  overscroll-behavior: none;
 }
 
 img, picture, video, canvas, svg {
