--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -1,3 +1,7 @@
+html, body {
+  height: 100%;
+}
+
 *, *::before, *::after {
   box-sizing: border-box;
 }
@@ -30,4 +34,5 @@ ol, ul {
 
 #root {
   isolation: isolate;
+  min-height: 100%;
 }
