- Fixes after rebase

--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -3,6 +3,7 @@
 .footer {
   display: flex;
   flex-direction: column;
+  text-align: center;
   gap: 36px;
   font-family: Lato, sans-serif;
   padding: 24px 16px 32px;
