--- a/src/app.styles.scss
+++ b/src/app.styles.scss
@@ -1,4 +1,10 @@
+.page {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+}
+
 .card {
-  padding: 2em;
+  flex-grow: 1;
   background-color: wheat;
 }
