- Fixes after rebase

--- a/src/components/sign-up/sign-up.scss
+++ b/src/components/sign-up/sign-up.scss
@@ -21,6 +21,7 @@
 
   &-title {
     font-family: Lato, sans-serif;
+    text-align: center;
     font-size: 1.25rem;
     font-weight: 500;
     line-height: 1.5;
