- fix semantics and class naming

--- a/src/components/information-card/information-card.scss
+++ b/src/components/information-card/information-card.scss
@@ -24,7 +24,7 @@
     line-height: 1.5;
   }
 
-  &-description {
+  &-body {
     font-family: "Open Sans", sans-serif;
     font-size: 0.875rem;
     font-weight: 300;
@@ -75,7 +75,7 @@
       font-size: 1.5rem;
     }
 
-    &-description {
+    &-body {
       font-size: 1rem;
     }
 
