--- a/src/components/embedded-section/embedded-section.scss
+++ b/src/components/embedded-section/embedded-section.scss
@@ -1,5 +1,5 @@
 @use "@/styles/responsive-mixins";
-@use "@/styles/mixins/partial-underline.mixin";
+@use "@/styles/mixins";
 
 .embedded-section {
   display: flex;
@@ -10,7 +10,7 @@
   gap: 16px;
 
   &-title {
-    @include partial-underline.partial-underline;
+    @include mixins.partial-underline;
     margin: auto;
     font-family: Lato, sans-serif;
     font-size: 1.25rem;
