--- a/src/features/projects-section/project-card/project-card.scss
+++ b/src/features/projects-section/project-card/project-card.scss
@@ -1,4 +1,5 @@
 @use "@/styles/responsive-mixins";
+@use "@/styles/mixins";
 
 .project-card {
   --_text-color: var(--text-color, var(--night));
@@ -44,11 +45,17 @@
   }
 
   &-body {
+    --_font-size: var(--font-size, 0.875rem);
+    --visible-lines: 5;
+    --line-height: 1.5;
+    @include mixins.multiline-text-ellipsis(var(--visible-lines));
+    max-height: calc(var(--_font-size) * var(--line-height) * var(--visible-lines));
     flex-grow: 1;
     font-family: "Open Sans", sans-serif;
-    font-size: 0.875rem;
+    font-size: var(--_font-size);
     font-weight: 400;
-    line-height: 1.5;
+    line-height: var(--line-height);
+    margin-bottom: auto;
   }
 
   &-action {
@@ -97,7 +104,7 @@
     }
 
     &-body {
-      font-size: 1rem;
+      --font-size: 1rem;
     }
 
     &-image-wrapper {
