--- a/src/styles/mixins/_index.scss
+++ b/src/styles/mixins/_index.scss
@@ -1,2 +1,3 @@
 @forward "@/styles/mixins/multiline-ellipsis.mixin";
 @forward "@/styles/mixins/partial-underline.mixin";
+@forward "@/styles/mixins/image-mask.mixin";
