--- a/src/features/news-section/news-section.scss
+++ b/src/features/news-section/news-section.scss
@@ -1,4 +1,5 @@
 @use "@/styles/responsive-mixins";
+@use "@/styles/layout";
 
 .news-section {
   display: flex;
@@ -50,8 +51,7 @@
   @include responsive-mixins.lg {
     padding: 120px 0 64px;
     gap: 24px;
-    // TODO: replace with value from constant
-    width: 83.3333333%;
+    width: map-get(layout.$columns, "col-10");
     margin: 0 auto;
 
     &-title {
