- Added integration of header and footer

--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -1,131 +1,5 @@
-@use "@/styles/responsive-mixins";
+@use "@/styles/mixins";
 
 .button {
-    --main-color: var(--primary);
-    --main-color-light-10: color-mix(in srgb, var(--white) 100%, var(--main-color) 10%);
-    --main-color-light-25: color-mix(in srgb, var(--white) 100%, var(--main-color) 25%);
-    --main-color-dark-25: color-mix(in srgb, var(--main-color) 100%, var(--black) 25%);
-    --_horizontal-padding: var(--horizontal-padding, 10px);
-    --_vertical-padding: var(--vertical-padding, 10px);
-    --_font-size: var(--font-size, 0.875rem);
-    --_font-weight: var(--font-weight, 500);
-    --_background-color: var(--background-color, transparent);
-    --_border-color: var(--border-color, var(--_background-color));
-    --_color: var(--color, var(--white));
-    --_line-height: var(--line-height, 21px);
-
-    font-family: Lato, sans-serif;
-    font-weight: var(--_font-weight);
-    font-size: var(--_font-size);
-    line-height: var(--_line-height);
-    border-radius: 8px;
-    border: 2px solid var(--_border-color);
-    padding: var(--_vertical-padding) var(--_horizontal-padding);
-    color: var(--_color);
-    background-color: var(--_background-color);
-    text-align: center;
-    transition: border-color ease-out 0.3s, background-color ease-out 0.3s, color ease-out 0.3s;
-
-    &:focus,
-    &:focus-visible {
-        outline: 2px solid -webkit-focus-ring-color;
-    }
-
-    &[data-theme="secondary"] {
-        --main-color: var(--secondary);
-    }
-
-    &[data-theme="tertiary"] {
-        --main-color: var(--tertiary);
-    }
-
-    &.form {
-        --border-color: var(--white);
-        --horizontal-padding: 14px;
-        --vertical-padding: 10px;
-
-        &:hover,
-        &:focus {
-            --color: var(--night);
-            --background-color: var(--white);
-            cursor: pointer;
-        }
-    }
-
-    &.main {
-        --background-color: var(--main-color);
-
-        &:hover,
-        &:focus {
-            --background-color: var(--main-color-dark-25);
-            cursor: pointer;
-        }
-    }
-
-    &.inverted {
-        --color: var(--main-color);
-        --background-color: var(--white);
-
-        &:hover,
-        &:focus {
-            --border-color: var(--main-color-light-10);
-            --background-color: var(--main-color-light-10);
-            cursor: pointer;
-        }
-    }
-
-    &.nav {
-        --font-weight: 500;
-        --background-color: var(--main-color);
-        --horizontal-padding: 14px;
-        --vertical-padding: 10px;
-
-        &:hover,
-        &:focus {
-            --background-color: var(--main-color-dark-25);
-            cursor: pointer;
-        }
-    }
-
-    &.outline {
-        --background-color: var(--white);
-        --border-color: var(--main-color);
-        --color: var(--main-color);
-
-        &:hover,
-        &:focus {
-            --background-color: var(--main-color-light-25);
-            cursor: pointer;
-        }
-    }
-
-    @media (prefers-reduced-motion: reduce) {
-        transition: none;
-    }
-
-    @include responsive-mixins.md {
-        &.form {
-            --horizontal-padding: 22px;
-            --vertical-padding: 14px;
-        }
-    }
-
-    @include responsive-mixins.lg {
-        --_horizontal-padding: var(--horizontal-padding, 14px);
-        --_vertical-padding: var(--vertical-padding, 14px);
-        --_font-size: var(--font-size, 1rem);
-        --_font-weight: var(--font-weight, 500);
-        --_background-color: var(--background-color, transparent);
-        --_border-color: var(--border-color, var(--_background-color));
-        --_color: var(--color, var(--white));
-        --_line-height: var(--line-height, 24px);
-
-        &.nav {
-            --font-size: 20px;
-            --font-weight: 600;
-            --horizontal-padding: 22px;
-            --vertical-padding: 16px;
-            --line-height: 24px;
-        }
-    }
+    @include mixins.button;
 }
