--- a/src/styles/mixins/_index.scss
+++ b/src/styles/mixins/_index.scss
@@ -1,3 +1,4 @@
 @forward "@/styles/mixins/multiline-ellipsis.mixin";
 @forward "@/styles/mixins/partial-underline.mixin";
 @forward "@/styles/mixins/image-mask.mixin";
+@forward "@/styles/mixins/button.mixin";
