--- a/src/app.styles.scss
+++ b/src/app.styles.scss
@@ -1,3 +1,6 @@
+@use "@/styles/responsive-mixins";
+@use "@/styles/constants";
+
 .page {
   display: flex;
   flex-direction: column;
@@ -6,4 +9,9 @@
 
 .main {
   flex-grow: 1;
+  padding-top: constants.$header-height;
+
+  @include responsive-mixins.lg {
+    padding-top: 0;
+  }
 }
