--- a/src/features/navigation/navigation-section/navigation-section.scss
+++ b/src/features/navigation/navigation-section/navigation-section.scss
@@ -32,7 +32,8 @@
     color: var(--night);
     text-decoration: none;
 
-    &:hover, &:focus {
+    &:hover,
+    &:focus {
       text-decoration: underline;
     }
   }
