--- a/src/features/navigation/navigation-sidebar/navigation-sidebar.scss
+++ b/src/features/navigation/navigation-sidebar/navigation-sidebar.scss
@@ -1,13 +1,13 @@
 @use "@/styles/responsive-mixins";
+@use "@/styles/constants";
 
 .navigation-sidebar {
   --sidebar-padding: 16px;
-  --header-height: 56px;
   position: fixed;
   width: 100%;
   height: 100%;
   top: 0;
-  padding: calc(var(--header-height) + var(--sidebar-padding)) var(--sidebar-padding) var(--sidebar-padding);
+  padding: calc(#{constants.$header-height} + var(--sidebar-padding)) var(--sidebar-padding) var(--sidebar-padding);
   background-color: var(--white);
   display: flex;
   flex-direction: column;
