- added palette component

--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -7,7 +7,7 @@
   gap: 36px;
   font-family: Lato, sans-serif;
   padding: 24px 16px 32px;
-  color: var(--night);
+  color: var(--black);
   background-color: var(--background);
 
   .contact-link {
