--- a/src/components/image-banner/image-banner.scss
+++ b/src/components/image-banner/image-banner.scss
@@ -5,7 +5,7 @@
   display: flex;
   justify-content: center;
   isolation: isolate;
-  color: var(--night);
+  color: var(--black);
 
   &-background {
     position: absolute;
