--- a/src/components/information-card/information-card.scss
+++ b/src/components/information-card/information-card.scss
@@ -7,7 +7,7 @@
   gap: 24px;
   justify-content: center;
   flex-direction: column;
-  color: var(--night);
+  color: var(--black);
   background-color: var(--white);
 
   &-info {
