--- a/src/features/hero-section/hero-article/hero-article.scss
+++ b/src/features/hero-section/hero-article/hero-article.scss
@@ -34,7 +34,7 @@
 
   &[data-variant="secondary"] {
     --article-color: var(--secondary);
-    color: var(--night);
+    color: var(--black);
   }
 
   @include responsive-mixins.md {
