--- a/src/features/navigation/navigation-menu/navigation-menu.scss
+++ b/src/features/navigation/navigation-menu/navigation-menu.scss
@@ -24,7 +24,7 @@
     font-size: 1rem;
     line-height: 1.5;
     text-decoration: none;
-    color: var(--night);
+    color: var(--black);
     background-color: transparent;
     width: 100%;
     border: none;
@@ -37,7 +37,7 @@
       height: 1px;
       left: 0;
       bottom: 0;
-      background-color: var(--night);
+      background-color: var(--black);
       transform: translateY(50%);
     }
 
