--- a/src/features/navigation/navigation.scss
+++ b/src/features/navigation/navigation.scss
@@ -13,7 +13,7 @@
   .burger[type="button"] {
     width: var(--burger-button-size);
     height: var(--burger-button-size);
-    color: var(--night);
+    color: var(--black);
     background-color: transparent;
     border: none;
     margin: 0;
