--- a/src/features/news-section/news-section.scss
+++ b/src/features/news-section/news-section.scss
@@ -12,7 +12,7 @@
     font-size: 1.25rem;
     font-weight: 500;
     line-height: 1.5;
-    color: var(--night);
+    color: var(--black);
   }
 
   &-list {
@@ -34,7 +34,7 @@
       font-size: 1.25rem;
       font-weight: 500;
       line-height: 1.5;
-      color: var(--night);
+      color: var(--black);
     }
 
     &-list {
