--- a/src/features/projects-section/projects-section.scss
+++ b/src/features/projects-section/projects-section.scss
@@ -10,7 +10,7 @@
     font-size: 1.25rem;
     font-weight: 500;
     line-height: 1.5;
-    color: var(--night);
+    color: var(--black);
     margin-bottom: 32px;
   }
 
