--- a/src/pages/not-found/not-found.scss
+++ b/src/pages/not-found/not-found.scss
@@ -2,7 +2,7 @@
 
 .not-found {
   padding: 24px 16px;
-  color: var(--night);
+  color: var(--black);
 
   &-title {
     font-family: Lato, sans-serif;
