--- a/src/components/embedded-section/embedded-section.scss
+++ b/src/components/embedded-section/embedded-section.scss
@@ -16,7 +16,7 @@
     font-size: 1.25rem;
     font-weight: 500;
     line-height: 1.5;
-    color: var(--night);
+    color: var(--black);
   }
 
   &-content > * {
