--- a/src/features/navigation/navigation-dropdown/navigation-dropdown.scss
+++ b/src/features/navigation/navigation-dropdown/navigation-dropdown.scss
@@ -16,7 +16,7 @@
     height: 1px;
     left: 0;
     bottom: 0;
-    background-color: var(--night);
+    background-color: var(--black);
     transform: translateY(50%);
   }
 
@@ -30,7 +30,7 @@
     font-size: 1rem;
     line-height: 1.5;
     text-decoration: none;
-    color: var(--night);
+    color: var(--black);
     background-color: transparent;
     width: 100%;
     border: none;
