--- a/src/features/navigation/navigation-section/navigation-section.scss
+++ b/src/features/navigation/navigation-section/navigation-section.scss
@@ -6,7 +6,7 @@
   gap: 16px;
 
   &-title {
-    color: var(--night);
+    color: var(--black);
     display: none;
   }
 
@@ -29,7 +29,7 @@
     font-weight: 500;
     padding: 8px 0 8px 8px;
     width: 100%;
-    color: var(--night);
+    color: var(--black);
     text-decoration: none;
 
     &:hover,
@@ -52,7 +52,7 @@
       right: 0;
       margin: 0 24px;
       height: 1px;
-      background-color: var(--night);
+      background-color: var(--black);
     }
 
     &-title {
