- moved wavy image to mixin for further usage

--- a/src/styles/mixins/_index.scss
+++ b/src/styles/mixins/_index.scss
@@ -2,3 +2,4 @@
 @forward "@/styles/mixins/partial-underline.mixin";
 @forward "@/styles/mixins/image-mask.mixin";
 @forward "@/styles/mixins/button.mixin";
+@forward "@/styles/mixins/wavy-background.mixin";
