--- a/src/components/wave-banner/wave-banner.scss
+++ b/src/components/wave-banner/wave-banner.scss
@@ -3,6 +3,7 @@
 @use "@/styles/layout";
 
 .wave-banner {
+  @include mixins.wavy-background;
   --_background-color: var(--background-color, var(--primary));
   --_color: var(--color, var(--white));
   --_decoration-color: var(--decoration-color, var(--white));
@@ -15,22 +16,6 @@
   &[data-theme="secondary"] {
     --background-color: var(--secondary);
     --color: var(--night);
-  }
-
-  &:before {
-    content: "";
-    position: absolute;
-    z-index: -1;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    background-image: url("@/assets/icons/background-path-sm.svg");
   }
 
   &-image {
@@ -63,10 +48,6 @@
   @include responsive-mixins.md {
     padding: 64px 24px;
 
-    &:before {
-      background-image: url("@/assets/icons/background-path-md.svg");
-    }
-
     &-action {
       width: auto;
     }
@@ -74,9 +55,6 @@
 
   @include responsive-mixins.lg {
     padding: 136px 0;
-    &:before {
-      background-image: url("@/assets/icons/background-path-lg.svg");
-    }
 
     &-content {
       display: flex;
