- changed inverted button color

--- a/src/styles/mixins/button.mixin.scss
+++ b/src/styles/mixins/button.mixin.scss
@@ -63,7 +63,7 @@
   }
 
   &.inverted {
-    --color: var(--main-color);
+    --color: var(--black);
     --background-color: var(--white);
 
     &:hover,
