- changed header behavior (hide on scroll to bottom and show on scroll to top) - changed background of social ribbon for mobile - fixed request for the layout

--- a/src/app.styles.scss
+++ b/src/app.styles.scss
@@ -9,9 +9,9 @@
 
 .main {
   flex-grow: 1;
-  padding-top: constants.$header-height;
+  padding-top: constants.$header-height-md;
 
   @include responsive-mixins.lg {
-    padding-top: 0;
+    padding-top: constants.$header-height-lg;
   }
 }
