--- a/src/styles/mixins/_index.scss
+++ b/src/styles/mixins/_index.scss
@@ -3,3 +3,4 @@
 @forward "@/styles/mixins/image-mask.mixin";
 @forward "@/styles/mixins/button.mixin";
 @forward "@/styles/mixins/wavy-background.mixin";
+@forward "@/styles/mixins/typography.mixin";
