--- a/src/components/information-card/information-card.scss
+++ b/src/components/information-card/information-card.scss
@@ -1,4 +1,5 @@
 @use "@/styles/responsive-mixins";
+@use "@/styles/mixins";
 
 .information-card {
   padding: 24px;
@@ -18,17 +19,7 @@
   }
 
   &-title {
-    font-family: Lato, sans-serif;
-    font-size: 1.25rem;
-    font-weight: 400;
-    line-height: 1.5;
-  }
-
-  &-body {
-    font-family: "Open Sans", sans-serif;
-    font-size: 0.875rem;
-    font-weight: 300;
-    line-height: 1.2;
+    @include mixins.h4;
   }
 
   &-image-wrapper {
@@ -46,7 +37,7 @@
 
     &-title {
       text-align: center;
-      font-size: 1rem;
+      @include mixins.h5;
     }
 
     &-image-wrapper {
@@ -72,11 +63,7 @@
     }
 
     &-title {
-      font-size: 1.5rem;
-    }
-
-    &-body {
-      font-size: 1rem;
+      @include mixins.h3;
     }
 
     &-image-wrapper {
