--- a/src/components/secondary-card/secondary-card.scss
+++ b/src/components/secondary-card/secondary-card.scss
@@ -25,17 +25,11 @@
   }
 
   &-title {
-    font-family: Lato, sans-serif;
-    font-size: 1.25rem;
-    font-weight: 500;
+    @include mixins.h4;
     line-height: 1.75;
   }
 
   &-body {
-    font-family: "Open Sans", sans-serif;
-    font-size: 0.875rem;
-    font-weight: 400;
-    line-height: 1.5;
     flex-grow: 1;
   }
 
@@ -70,11 +64,7 @@
     grid-template-columns: 5fr minmax(auto, 3fr);
 
     &-title {
-      font-size: 1.5rem;
-    }
-
-    &-body {
-      font-size: 1rem;
+      @include mixins.h3;
     }
 
     &-actions {
