--- a/src/components/wave-banner/wave-banner.scss
+++ b/src/components/wave-banner/wave-banner.scss
@@ -38,17 +38,10 @@
   }
 
   &-title {
-    font-family: Lato, sans-serif;
-    font-size: 1.25rem;
-    font-weight: 500;
-    line-height: 1.5;
+    @include mixins.h4;
   }
 
   &-body {
-    font-family: "Open Sans", sans-serif;
-    font-size: 0.875rem;
-    font-weight: 400;
-    line-height: 1.5;
     margin-top: 12px;
   }
 
