--- a/src/features/hero-section/hero-article/hero-article.scss
+++ b/src/features/hero-section/hero-article/hero-article.scss
@@ -1,4 +1,5 @@
 @use "@/styles/responsive-mixins";
+@use "@/styles/mixins";
 
 .hero-article {
   --article-color: var(--primary);
@@ -8,18 +9,11 @@
   color: var(--white);
 
   &-title {
-    font-family: Lato, sans-serif;
-    font-size: 1.25rem;
-    font-weight: 500;
-    line-height: 1.5;
+    @include mixins.h4;
   }
 
   &-body {
     margin: 12px 0 24px;
-    font-family: Open Sans, sans-serif;
-    font-size: 0.875rem;
-    font-weight: 400;
-    line-height: 1.5;
   }
 
   &-wave {
@@ -42,8 +36,7 @@
     border-radius: 0 0 20px 0;
 
     &-title {
-      font-size: 1.5rem;
-      line-height: 1.2;
+      @include mixins.h3;
     }
 
     &-body {
@@ -59,7 +52,7 @@
     width: 590px;
 
     &-title {
-      font-size: 2.5rem;
+      @include mixins.h1;
     }
 
     &-body {
