--- a/src/features/information-section/information-section.scss
+++ b/src/features/information-section/information-section.scss
@@ -1,25 +1,14 @@
 @use "@/styles/responsive-mixins";
 @use "@/styles/layout";
+@use "@/styles/mixins";
 
 .information-section {
   display: flex;
   flex-direction: column;
-  padding: 32px 16px;
   gap: 20px;
 
   &-title {
     margin-bottom: 12px;
-    font-family: Lato, sans-serif;
-    font-size: 1.25rem;
-    font-weight: 500;
-    line-height: 1.5;
-  }
-
-  &-description {
-    font-family: "Open Sans", sans-serif;
-    font-size: 0.875rem;
-    font-weight: 400;
-    line-height: 1.5rem;
   }
 
   &-list {
@@ -37,7 +26,6 @@
   }
 
   @include responsive-mixins.md {
-    padding: 48px 24px 24px;
     gap: 24px;
 
     &-title {
@@ -64,14 +52,9 @@
   }
 
   @include responsive-mixins.lg {
-    padding: 64px 0 36px;
     gap: 36px;
     width: map-get(layout.$columns, "col-10");
     margin: auto;
-
-    &-title {
-      font-size: 2rem;
-    }
 
     &-description {
       margin-bottom: 16px;
