--- a/src/features/news-section/news-section.scss
+++ b/src/features/news-section/news-section.scss
@@ -1,17 +1,13 @@
 @use "@/styles/responsive-mixins";
 @use "@/styles/layout";
+@use "@/styles/mixins";
 
 .news-section {
   display: flex;
   flex-direction: column;
   gap: 48px;
-  padding: 48px 16px;
 
   &-title {
-    font-family: Lato, sans-serif;
-    font-size: 1.25rem;
-    font-weight: 500;
-    line-height: 1.5;
     color: var(--black);
   }
 
@@ -26,16 +22,7 @@
   }
 
   @include responsive-mixins.md {
-    padding: 36px 24px;
     gap: 24px;
-
-    &-title {
-      font-family: Lato, sans-serif;
-      font-size: 1.25rem;
-      font-weight: 500;
-      line-height: 1.5;
-      color: var(--black);
-    }
 
     &-list {
       grid-template-columns: repeat(3, 1fr);
@@ -49,14 +36,9 @@
   }
 
   @include responsive-mixins.lg {
-    padding: 120px 0 64px;
     gap: 24px;
     width: map-get(layout.$columns, "col-10");
     margin: 0 auto;
-
-    &-title {
-      font-size: 2rem;
-    }
 
     &-list {
       gap: 24px;
